assets/css/style.css
/* Reset */
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family:'Poppins',sans-serif;
}

html{
    scroll-behavior:smooth;
}

body{
    background:#0F172A;
    color:#F8FAFC;
}

a{
    text-decoration:none;
}

ul{
    list-style:none;
}

/* NAVBAR */

.navbar{
    position:fixed;
    top:0;
    left:0;
    width:100%;
    display:flex;
    justify-content:space-between;
    align-items:center;
    padding:20px 8%;
    background:rgba(15,23,42,.75);
    backdrop-filter:blur(20px);
    border-bottom:1px solid rgba(255,255,255,.08);
    z-index:9999;
}

.logo{

    font-size:30px;

    font-weight:700;

    background:linear-gradient(90deg,#38BDF8,#0EA5E9);

    -webkit-background-clip:text;

    -webkit-text-fill-color:transparent;

}

.nav-links{
    display:flex;
    gap:35px;
}

.nav-links a{
    color:white;
    transition:.3s;
}

.nav-links a:hover{
    color:#38BDF8;
}

/* HERO */

.hero{
    min-height:100vh;
    display:flex;
    justify-content:space-between;
    align-items:center;
    padding:140px 8% 80px;
}

.hero-left{
    width:55%;
    position:relative;
    z-index:2;
}
.hello{
    color:#38BDF8;
    font-size:22px;
    margin-bottom:20px;
}

.hero h1{

    font-size:72px;

    line-height:1.1;

    letter-spacing:1px;

}

.hero h2{
    font-size:36px;
    color:#38BDF8;
    margin-bottom:20px;
}

.description{
    color:#CBD5E1;
    line-height:1.8;
    font-size:18px;
    margin-bottom:35px;
}

.buttons{
    display:flex;
    gap:20px;
}

.btn{
    padding:15px 35px;
    border-radius:50px;
    font-weight:600;
}

.primary-btn{
    background:#38BDF8;
    color:#0F172A;
}

.secondary-btn{
    border:2px solid #38BDF8;
    color:#38BDF8;
}


/* CARDS */

.hero-right{
    width:40%;
    display:grid;
    grid-template-columns:repeat(2,220px);
    gap:20px;
    justify-content:end;
}

.card{
    background:#1E293B;
    padding:35px;
    border-radius:18px;
    text-align:center;
    transition:.4s;
    border:1px solid rgba(255,255,255,.08);
}

.project-card:hover{

    transform:translateY(-12px) scale(1.03);

    box-shadow:0 25px 45px rgba(56,189,248,.30);

}

.card h2{
    color:#38BDF8;
    font-size:34px;
}
/* ================= ABOUT ================= */

.about{
    padding:100px 8%;
    background:#111827;
}

.section-title{
    text-align:center;
    margin-bottom:60px;
}

.section-title h2{

    font-size:46px;

    color:#38BDF8;

    position:relative;

    display:inline-block;

    margin-bottom:15px;

}
.section-title h2::after{

    content:"";

    position:absolute;

    width:60%;

    height:4px;

    background:#38BDF8;

    left:20%;

    bottom:-8px;

    border-radius:10px;

}

.section-title p{
    color:#94A3B8;
    margin-top:10px;
}

.about-container{
    display:flex;
    justify-content:space-between;
    align-items:center;
    gap:60px;
}

.about-left{
    flex:1;
    display:flex;
    justify-content:center;
    align-items:center;
}

.about-left img{
    width:320px;
    height:320px;
    object-fit:cover;
    object-position:center;
    border-radius:50%;
    border:5px solid #38BDF8;
    box-shadow:0 0 30px rgba(56,189,248,.4);
    overflow:hidden;
}

.about-right{
    flex:1.5;
}

.about-right h3{
    font-size:34px;
    margin-bottom:20px;
    color:#38BDF8;
}

.about-right p{
    color:#CBD5E1;
    line-height:1.9;
    margin-bottom:20px;
}

.about-info{
    display:grid;
    grid-template-columns:repeat(2,1fr);
    gap:25px;
    margin-top:40px;
}

.about-info div{
    background:#1E293B;
    padding:20px;
    border-radius:12px;
}

.about-info span{
    color:#94A3B8;
    font-size:14px;
}

.about-info h4{
    margin-top:8px;
    color:white;
}
/* ================= SKILLS ================= */

.skills{
    padding:100px 8%;
    background:#0F172A;
}

.skills-container{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
    gap:25px;
    margin-top:50px;
}

.skill-card{
    background:#1E293B;
    padding:35px;
    border-radius:15px;
    text-align:center;
    transition:.3s;
}

.skill-card:hover{
    transform:translateY(-8px);
    box-shadow:0 0 20px rgba(56,189,248,.3);
}

.skill-card i{
    font-size:45px;
    color:#38BDF8;
    margin-bottom:20px;
}

.skill-card h3{
    color:white;
}

/* ================= PROJECTS ================= */

.projects{
    padding:100px 8%;
    background:#111827;
}

.projects-container{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
    gap:35px;
    margin-top:50px;
    align-items:stretch;
}

.project-card{
    background:#1E293B;
    border-radius:18px;
    overflow:hidden;
    transition:.35s;
    margin-bottom:30px;
}



.project-card img{
    width:100%;
    height:220px;
    object-fit:cover;
    transition:.4s;
}

.project-info{

    padding:25px;

}

.project-info h3{

    color:#38BDF8;
    margin-bottom:15px;

}

.project-info p{

    color:#CBD5E1;
    line-height:1.8;
    margin-bottom:20px;

}

.project-tech{

    display:flex;
    flex-wrap:wrap;
    gap:10px;
    margin-bottom:25px;

}

.project-tech span{

    padding:8px 15px;
    border-radius:25px;
    border:1px solid #38BDF8;
    color:#38BDF8;
    font-size:14px;

}

.project-btn{

    display:inline-block;
    background:#38BDF8;
    color:#0F172A;
    padding:12px 22px;
    border-radius:8px;
    font-weight:600;
    transition:.3s;

}

.project-btn:hover{

    transform:scale(1.05);

}
/* ================= CONTACT ================= */

.contact{
    padding:100px 8%;
    background:#111827;
}

.contact-container{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
    gap:30px;
}

.contact-card{

    background:#1E293B;
    padding:40px;
    border-radius:18px;
    text-align:center;
    transition:.3s;

}

.contact-card:hover{

    transform:translateY(-10px);

    box-shadow:0 20px 40px rgba(56,189,248,.25);

}

.contact-card i{

    font-size:45px;
    color:#38BDF8;
    margin-bottom:20px;

}

.contact-card h3{

    margin-bottom:15px;

}

.contact-card p,
.contact-card a{

    color:#CBD5E1;

}
footer{

    background:#0F172A;

    text-align:center;

    padding:30px;

    color:#94A3B8;

}
.card i{
    font-size:35px;
    color:#38BDF8;
    margin-bottom:15px;
}


.project-card:hover img{

    transform:scale(1.08);

}
/* ================= EXPERIENCE ================= */

/* ================= EXPERIENCE ================= */

.experience{
    padding:100px 8%;
    background:#111827;
}

.timeline{
    max-width:900px;
    margin:60px auto 0;
}

.timeline-item{
    margin-bottom:35px;
}

.timeline-icon{
    display:none;
}

.timeline-content{
    background:#1E293B;
    padding:30px;
    border-radius:18px;
    text-align:center;
    transition:.3s;
}

.timeline-content:hover{
    transform:translateY(-8px);
    box-shadow:0 20px 40px rgba(56,189,248,.25);
}

.timeline-content h3{
    color:#38BDF8;
    font-size:26px;
    margin-bottom:10px;
}

.timeline-content h4{
    color:#ffffff;
    margin-bottom:15px;
}

.timeline-content p{
    color:#CBD5E1;
    line-height:1.8;
}
/* ================= CERTIFICATES ================= */

.certificates{
    padding:100px 8%;
    background:#0F172A;
}

.certificate-container{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
    gap:30px;
}

.certificate-card{
    background:#1E293B;
    padding:35px;
    border-radius:18px;
    text-align:center;
    transition:.3s;
}

.certificate-card:hover{
    transform:translateY(-8px);
    box-shadow:0 20px 40px rgba(56,189,248,.25);
}

.certificate-card i{
    font-size:45px;
    color:#38BDF8;
    margin-bottom:20px;
}

.certificate-card h3{
    color:white;
    margin-bottom:10px;
}

.certificate-card p{
    color:#CBD5E1;
}
.project-buttons{
    display:flex;
    gap:15px;
    margin-top:20px;
}

.project-btn{
    display:inline-flex;
    align-items:center;
    gap:8px;
    padding:10px 18px;
    background:#38BDF8;
    color:#0F172A;
    border-radius:8px;
    font-weight:600;
    transition:.3s;
}

.project-btn:hover{
    transform:translateY(-3px);
    box-shadow:0 10px 20px rgba(56,189,248,.35);
}

.secondary-project-btn{
    background:transparent;
    border:2px solid #38BDF8;
    color:#38BDF8;
}

.secondary-project-btn:hover{
    background:#38BDF8;
    color:#0F172A;
}
.featured{
    display:inline-block;
    margin-bottom:15px;
    padding:8px 14px;
    background:#38BDF8;
    color:#0F172A;
    border-radius:25px;
    font-size:14px;
    font-weight:600;
}
/* ================= SCROLL TO TOP ================= */

#topBtn{
    position:fixed;
    bottom:25px;
    right:25px;
    width:55px;
    height:55px;
    border:none;
    border-radius:50%;
    background:#38BDF8;
    color:#0F172A;
    font-size:22px;
    cursor:pointer;
    display:none;
    transition:.3s;
    z-index:1000;
}

#topBtn:hover{
    transform:translateY(-5px);
    box-shadow:0 0 20px rgba(56,189,248,.5);
}
.nav-links a.active{

    color:#38BDF8;

    font-weight:600;

}
::-webkit-scrollbar{

    width:10px;

}

::-webkit-scrollbar-track{

    background:#0F172A;

}

::-webkit-scrollbar-thumb{

    background:#38BDF8;

    border-radius:20px;

}

::-webkit-scrollbar-thumb:hover{

    background:#0EA5E9;

}
::selection{

    background:#38BDF8;

    color:#0F172A;

}
body{

    background:
    radial-gradient(circle at top right,#1e3a8a22,transparent 30%),
    radial-gradient(circle at bottom left,#0ea5e922,transparent 35%),
    #0F172A;

}
.social-icons{
    margin-top:35px;
    display:flex;
    justify-content:center;
    gap:20px;
}

.social-icons a{
    width:55px;
    height:55px;
    border-radius:50%;
    background:#1E293B;
    display:flex;
    justify-content:center;
    align-items:center;
    color:#38BDF8;
    font-size:26px;
    transition:.3s;
}

.social-icons a:hover{
    background:#38BDF8;
    color:#0F172A;
    transform:translateY(-5px);
}
/* ================= SOCIAL ICONS ================= */

.social-icons{
    display:flex;
    gap:20px;
    margin-top:30px;
}

.social-icons a{
    width:55px;
    height:55px;
    display:flex;
    justify-content:center;
    align-items:center;
    background:#1E293B;
    color:#38BDF8;
    border-radius:50%;
    font-size:24px;
    transition:.3s;
}

.social-icons a:hover{
    background:#38BDF8;
    color:#0F172A;
    transform:translateY(-5px);
    box-shadow:0 0 20px rgba(56,189,248,.5);
}

